--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,13 +2,30 @@
 !!!
 %html
 %head
- %title Chania Property Listings
- = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true 
- = javascript_include_tag 'application', 'data-turbolinks-track' => true 
- = csrf_meta_tags 
+  %title Chania Property Listings
+  = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true 
+  = javascript_include_tag 'application', 'data-turbolinks-track' => true 
+  = csrf_meta_tags 
 
 %body
- - Category.all.each do |category|
-  = link_to category.name, properties_path(category: category.name)
- = yield
- 
+  %nav.navbar.navbar-default
+    .container
+      .navbar-brand= link_to "Chania Property Listings", root_path
+      %ul.nav.navbar-nav.navbar-left
+        - Category.all.each do |category|
+          %li= link_to category.name, properties_path(category: category.name)  
+      - if user_signed_in?
+        %ul.nav.navbar-nav.navbar-right
+
+          %li= link_to "Create Advert", new_property_path
+          %li= link_to "Account",edit_user_registration_path
+          %li= link_to "sign Out", destroy_user_session_path, method: :delete
+
+      -else
+        %ul.nav.navbar-nav.navbar-right
+          %li= link_to "Sign Up", new_user_registration_path
+          %li= link_to "Sign In", new_user_session_path
+    .container
+    - flash.each do |name, msg|
+      = content_tag :div, msg, class: "alert alert-info"
+  = yield
