--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -1,3 +1,5 @@
-%h1 Edit Listing
-= render 'form'
-= link_to "Back", root_path 
+.col-md-6.col-md-offset-3
+	%h1 Edit Listing
+	= image_tag @property.image.url(:medium)
+	= render 'form'
+	= link_to "Back", root_path 
