--- a/app/views/properties/show.html.haml
+++ b/app/views/properties/show.html.haml
@@ -1,16 +1,18 @@
-%h1= @property.pName
-%p= @property.county
-%p=@property.locality
-%p= @property.pDescription
-%p=@property.price
-%p Submitted by
-= @property.user.email
-%br/
-%button.btn.btn-default= link_to "Buy or Rent", @property.url
-%br/
+.col-md-6.col-md-offset-3
+	= image_tag @property.image.url(:medium)
+	%h1= @property.pName
+	%p= @property.county
+	%p=@property.locality
+	%p= @property.pDescription
+	%p=@property.price
+	%p Submitted by
+	= @property.user.email
+	%br/
+	%button.btn.btn-default= link_to "Buy or Rent", @property.url
+	%br/
 
-=link_to "Home", root_path
-=link_to "Edit", edit_property_path(@property)
-=link_to "Delete", property_path(@property),method: :delete, data:{confirm: "Are you sure"}
+	=link_to "Home", root_path
+	=link_to "Edit", edit_property_path(@property)
+	=link_to "Delete", property_path(@property),method: :delete, data:{confirm: "Are you sure"}
 
- 
+	 
